# ib-pseudocode-interpreter

./: .gitignore  Cargo.toml  README.md  build.py  ibps  note.md  rust-toolchain.toml  test.ibps  test.py
examples/: html.ibps
src/: ibps_std.rs  main.rs  run.rs  stdlib.rs  to_ir.rs
src/to_ir/: regex_replace.rs
stdlib/: header.py  stdarr.py  stdcoll.py  stdqueue.py  stdstack.py
