[package]
name = "ibps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
fancy-regex = "0.10.0"
rustpython = { path = "./RustPython/", features = ["freeze-stdlib", "stdlib"] }
rustpython-pylib = { path = "./RustPython/pylib/" }
